# cli-bloom

./: Cargo.toml  LICENSE  README.md
src/: errors.rs  fs_loader.rs  lib.rs  main.rs
test/data/: simple_dump.json
